fix: avatar not showing in collapsed sidebar
The CSS rule .sidebar-footer > div:not(.user-info) was hiding the
.sidebar-user-wrapper (which contains the avatar) because it doesn't
have the .user-info class. Changed selector to div:not(.sidebar-user-wrapper).

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -566,7 +566,7 @@ cap-widget {
   display: none;
 }
 
-.sidebar.collapsed .sidebar-footer > div:not(.user-info) {
+.sidebar.collapsed .sidebar-footer > div:not(.sidebar-user-wrapper) {
   display: none;
 }
 
